// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCard betaBadgeProps renders href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--hasBetaBadge emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical-hasBetaBadge"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <a
    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-euiCard__betaBadge"
    href="http://www.elastic.co/"
    id="generated-idBetaBadge"
    rel=""
    title="Link"
  >
    Link
  </a>
</div>
`;

exports[`EuiCard horizontal selectable 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--horizontal euiCard--isClickable euiCard--isSelectable euiCard--isSelectable--text emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left-horizontal"
>
  <div
    class="euiCard__content emotion-euiCard__content-horizontal"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-left-interactive"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <button
    aria-checked="false"
    aria-describedby="generated-idTitle generated-idDescription"
    class="emotion-euiButtonDisplay-m-fullWidth-m-base-text-euiCardSelect"
    role="switch"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      Select
    </span>
  </button>
</div>
`;

exports[`EuiCard is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
  data-test-subj="test subject string"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props a null icon 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props accepts div props like style 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
  style="min-width:0"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props children 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="emotion-euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props children with description 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
    <div
      class="emotion-euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props display accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-accent-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-danger-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-primary-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-subdued-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-success-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-transparent-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-warning-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props footer 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <div
    class="emotion-euiCard__footer"
  >
    <span>
      Footer
    </span>
  </div>
</div>
`;

exports[`EuiCard props hasBorder 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasBorder-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props horizontal 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--horizontal emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-left-horizontal"
>
  <div
    class="euiCard__content emotion-euiCard__content-horizontal"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-left"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props href supports href as a link 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--isClickable emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
        href="#"
        rel="noreferrer"
      >
        Hoi
      </a>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        There
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props icon 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--hasIcon emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__top emotion-euiCard__top-vertical"
  >
    <span
      class="myIconClass euiCard__icon emotion-euiCard__icon-vertical"
      data-euiicon-type="apmApp"
    />
  </div>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props image 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__top emotion-euiCard__top-vertical"
  >
    <div
      class="euiCard__image emotion-euiCard__image"
    >
      <div>
        <img
          alt="Nature"
          src="https://source.unsplash.com/400x200/?Nature"
        />
      </div>
    </div>
  </div>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props isDisabled 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard-isDisabled emotion-euiPanel-grow-m-m-subdued-euiCard-center-vertical-disabled"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <button
        aria-describedby=" generated-idDescription"
        class="euiCard__titleButton emotion-euiCard__text-center-disabled"
        disabled=""
      >
        Card title
      </button>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned emotion-euiPanel-grow-m-l-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingSmall euiCard euiCard--centerAligned emotion-euiPanel-grow-m-s-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize xl is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-xl-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize xs is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiCard euiCard--centerAligned emotion-euiPanel-grow-m-xs-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props selectable 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned euiCard--isClickable euiCard--isSelectable euiCard--isSelectable--text emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center-interactive"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <button
    aria-checked="false"
    aria-describedby="generated-idTitle generated-idDescription"
    class="emotion-euiButtonDisplay-m-fullWidth-m-base-text-euiCardSelect"
    role="switch"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      Select
    </span>
  </button>
</div>
`;

exports[`EuiCard props textAlign 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--rightAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-right-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-right"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleElement 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <h4
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </h4>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleElement with nodes 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <h4
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </h4>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleSize 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--centerAligned emotion-euiPanel-grow-m-m-plain-hasShadow-euiCard-center-vertical"
>
  <div
    class="euiCard__content emotion-euiCard__content-vertical"
  >
    <p
      class="euiTitle euiCard__title emotion-euiTitle-xs"
      id="generated-idTitle"
    >
      <span
        class="emotion-euiCard__text-center"
      >
        Card title
      </span>
    </p>
    <div
      class="euiText emotion-euiText-s-euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;
